# GLASSES, Generic cLASSES
# Copyright (c) 1998-2004, Rodrigo Augusto Barbato Ferreira

SUBDIRS=ref reflect
JAVAROOT=$(top_builddir)/classes
AM_JAVACFLAGS=-bootclasspath $(JAVAROOT)
EXTRA_DIST=$(noinst_JAVA)

noinst_JAVA=\
	lang.java\
	math.java\
	AbstractMethodError.java\
	ArithmeticException.java\
	ArrayIndexOutOfBoundsException.java\
	ArrayStoreException.java\
	AssertionError.java\
	Boolean.java\
	Byte.java\
	Character.java\
	CharSequence.java\
	Class.java\
	ClassCastException.java\
	ClassCircularityError.java\
	ClassFormatError.java\
	ClassLoader.java\
	ClassNotFoundException.java\
	CloneNotSupportedException.java\
	Cloneable.java\
	Comparable.java\
	Compiler.java\
	Double.java\
	Error.java\
	Exception.java\
	ExceptionInInitializerError.java\
	Float.java\
	IllegalAccessError.java\
	IllegalAccessException.java\
	IllegalArgumentException.java\
	IllegalMonitorStateException.java\
	IllegalStateException.java\
	IllegalThreadStateException.java\
	IncompatibleClassChangeError.java\
	IndexOutOfBoundsException.java\
	InheritableThreadLocal.java\
	InstantiationError.java\
	InstantiationException.java\
	Integer.java\
	InternalError.java\
	InterruptedException.java\
	LinkageError.java\
	Long.java\
	Math.java\
	NegativeArraySizeException.java\
	NoClassDefFoundError.java\
	NoSuchFieldError.java\
	NoSuchFieldException.java\
	NoSuchMethodError.java\
	NoSuchMethodException.java\
	NullPointerException.java\
	Number.java\
	NumberFormatException.java\
	Object.java\
	OutOfMemoryError.java\
	Package.java\
	Process.java\
	Runnable.java\
	Runtime.java\
	RuntimeException.java\
	RuntimePermission.java\
	SecurityException.java\
	SecurityManager.java\
	Short.java\
	StackOverflowError.java\
	StackTraceElement.java\
	StrictMath.java\
	String.java\
	StringBuffer.java\
	StringIndexOutOfBoundsException.java\
	System.java\
	Thread.java\
	ThreadDeath.java\
	ThreadGroup.java\
	ThreadLocal.java\
	Throwable.java\
	UnknownError.java\
	UnsatisfiedLinkError.java\
	UnsupportedClassVersionError.java\
	UnsupportedOperationException.java\
	VerifyError.java\
	VirtualMachineError.java\
	Void.java
