# GLASSES, Generic cLASSES
# Copyright (c) 1998-2004, Rodrigo Augusto Barbato Ferreira

JAVAROOT=$(top_builddir)/classes
AM_JAVACFLAGS=-bootclasspath $(JAVAROOT)
EXTRA_DIST=$(noinst_JAVA)

noinst_JAVA=\
	net.java\
	Authenticator.java\
	BindException.java\
	ConnectException.java\
	ContentHandler.java\
	ContentHandlerFactory.java\
	DatagramPacket.java\
	DatagramSocket.java\
	DatagramSocketImpl.java\
	DatagramSocketImplFactory.java\
	FileNameMap.java\
	HttpURLConnection.java\
	InetAddress.java\
	JarURLConnection.java\
	MalformedURLException.java\
	MulticastSocket.java\
	NetPermission.java\
	NoRouteToHostException.java\
	PasswordAuthentication.java\
	PortUnreachableException.java\
	ProtocolException.java\
	ServerSocket.java\
	Socket.java\
	SocketException.java\
	SocketImpl.java\
	SocketImplFactory.java\
	SocketOptions.java\
	SocketTimeoutException.java\
	UnknownHostException.java\
	UnknownServiceException.java\
	URL.java\
	URLClassLoader.java\
	URLConnection.java\
	URLStreamHandler.java\
	URLStreamHandlerFactory.java

