# GLASSES, Generic cLASSES
# Copyright (c) 1998-2004, Rodrigo Augusto Barbato Ferreira

SUBDIRS=cert
JAVAROOT=$(top_builddir)/classes
AM_JAVACFLAGS=-bootclasspath $(JAVAROOT)
EXTRA_DIST=$(noinst_JAVA)

noinst_JAVA=\
	AccessControlContext.java\
	AccessControlException.java\
	AccessController.java\
	AllPermission.java\
	BasicPermission.java\
	Certificate.java\
	CodeSource.java\
	DigestException.java\
	DigestInputStream.java\
	DigestOutputStream.java\
	DomainCombiner.java\
	GeneralSecurityException.java\
	Guard.java\
	GuardedObject.java\
	Identity.java\
	IdentityScope.java\
	InvalidAlgorithmParameterException.java\
	InvalidKeyException.java\
	InvalidParameterException.java\
	Key.java\
	KeyException.java\
	KeyManagementException.java\
	KeyPair.java\
	KeyStoreException.java\
	MessageDigest.java\
	MessageDigestSpi.java\
	NoSuchAlgorithmException.java\
	NoSuchProviderException.java\
	Permission.java\
	PermissionCollection.java\
	Policy.java\
	Principal.java\
	PrivateKey.java\
	PrivilegedAction.java\
	PrivilegedActionException.java\
	PrivilegedExceptionAction.java\
	ProtectionDomain.java\
	Provider.java\
	ProviderException.java\
	PublicKey.java\
	SecureClassLoader.java\
	Security.java\
	SecurityPermission.java\
	SignatureException.java\
	UnrecoverableKeyException.java
