# GLASSES, Generic cLASSES
# Copyright (c) 1998-2004, Rodrigo Augusto Barbato Ferreira

SUBDIRS=jar zip
JAVAROOT=$(top_builddir)/classes
AM_JAVACFLAGS=-bootclasspath $(JAVAROOT)
EXTRA_DIST=$(noinst_JAVA)

noinst_JAVA=\
	AbstractCollection.java\
	AbstractList.java\
	AbstractMap.java\
	AbstractSet.java\
	ArrayList.java\
	Arrays.java\
	BitSet.java\
	Collection.java\
	Comparator.java\
	ConcurrentModificationException.java\
	Dictionary.java\
	EmptyStackException.java\
	Enumeration.java\
	EventListener.java\
	EventObject.java\
	HashMap.java\
	HashSet.java\
	Hashtable.java\
	Iterator.java\
	List.java\
	ListIterator.java\
	ListResourceBundle.java\
	Locale.java\
	Map.java\
	MissingResourceException.java\
	NoSuchElementException.java\
	Observable.java\
	Observer.java\
	Properties.java\
	PropertyResourceBundle.java\
	Random.java\
	RandomAccess.java\
	ResourceBundle.java\
	Set.java\
	SortedMap.java\
	SortedSet.java\
	Stack.java\
	StringTokenizer.java\
	TooManyListenersException.java\
	Vector.java\
	WeakHashMap.java
