# GLASSES, Generic cLASSES
# Copyright (c) 1998-2004, Rodrigo Augusto Barbato Ferreira

JAVAROOT=$(top_builddir)/classes
AM_JAVACFLAGS=-bootclasspath $(JAVAROOT)
EXTRA_DIST=$(noinst_JAVA)

noinst_JAVA=\
	PhantomReference.java\
	Reference.java\
	ReferenceQueue.java\
	SoftReference.java\
	WeakReference.java
