# GLASSES, Generic cLASSES
# Copyright (c) 1998-2004, Rodrigo Augusto Barbato Ferreira

JAVAROOT=$(top_builddir)/classes
AM_JAVACFLAGS=-bootclasspath $(JAVAROOT)
EXTRA_DIST=$(noinst_JAVA)

noinst_JAVA=\
	Adler32.java\
	CheckedInputStream.java\
	CheckedOutputStream.java\
	Checksum.java\
	CRC32.java\
	DataFormatException.java\
	GZIPInputStream.java\
	Inflater.java\
	InflaterInputStream.java\
	ZipConstants.java\
	ZipEntry.java\
	ZipException.java\
	ZipFile.java\
	ZipInputStream.java
